# sealantd

./: .gitignore  Cargo.toml  README.md  package.json  plan.html  pnpm-lock.yaml
.changeset/: clone-remote-default-branch.md  gateway-daemon-acceptance-blockers.md  org-rename-sealant-sh.md  reap-gate.md  rename-release-env.md  rename-sandbox-to-workspace.md  true-wasps-camp.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  version.yml
crates/sealant-control/: Cargo.toml
crates/sealant-control/src/: frame.rs  lib.rs  server.rs  service.rs
crates/sealant-eventlog/: Cargo.toml
crates/sealant-eventlog/src/: lib.rs
crates/sealant-fs/: Cargo.toml
crates/sealant-fs/src/: diff.rs  lib.rs  runtime.rs  snapshot.rs  watcher.rs
crates/sealant-network/: Cargo.toml
crates/sealant-network/src/: capability.rs  lib.rs
crates/sealant-process/: Cargo.toml
crates/sealant-process/src/: lib.rs  platform.rs  registry.rs  runtime.rs  sftp.rs  signals.rs
crates/sealant-process/tests/: orphan_reaping.rs  reap_gate.rs
crates/sealant-protocol/: Cargo.toml
crates/sealant-protocol/examples/: dump-schema.rs
crates/sealant-protocol/proto/: sealant.proto
crates/sealant-protocol/src/: bytes.rs  command.rs  convert.rs  error.rs  event.rs  frame.rs  ids.rs  lib.rs  message.rs
crates/sealant-pty/: Cargo.toml
crates/sealant-pty/src/: lib.rs  pty.rs  session.rs
crates/sealant-runtime-core/: Cargo.toml
crates/sealant-runtime-core/src/: clock.rs  config.rs  error.rs  idgen.rs  lib.rs  status.rs
crates/sealant-telemetry/: Cargo.toml
crates/sealant-telemetry/src/: bus.rs  lib.rs
crates/sealantctl/: Cargo.toml
crates/sealantctl/src/: main.rs
crates/sealantd/: Cargo.toml
crates/sealantd/src/: app.rs  lib.rs  main.rs  runtime.rs  shutdown.rs
crates/sealantd/src/boot/: config.rs  git.rs  mod.rs
crates/sealantd/tests/: e2e.rs
docker/: Dockerfile
docs/adr/: 0001-workspace-placement-and-shape.md  0002-wire-schema-and-framing.md  0003-identifiers-correlation-and-sequencing.md  0004-unix-socket-vs-stdio.md  0005-pty-and-process-group-semantics.md  0006-pidfd-subreaper-and-pid1.md  0007-durable-spool-format-and-ack-model.md  0008-filesystem-snapshot-watcher-hybrid.md  0009-network-collector-backends-and-privilege-separation.md  0010-typescript-type-generation-and-compatibility.md  0011-packaging-static-musl-amd64.md  README.md
docs/runtime/: README.md  architecture.md  integration-brief.md  integration.md  known-limitations.md  operations.md  requirements-matrix.md  threat-model.md  validation-plan.md
