[package]
name = "sealant-fs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Filesystem snapshots, hashing, watcher, coalescing, and diffs."

[lints]
workspace = true

[dependencies]
sealant-protocol = { workspace = true }
sealant-runtime-core = { workspace = true }
sealant-telemetry = { workspace = true }
tokio = { workspace = true }
notify = { workspace = true }
walkdir = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
