[package]
name = "sealant-pty"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "PTY allocation, interactive sessions, input/output capture, and resize."

[lints]
workspace = true

[dependencies]
sealant-protocol = { workspace = true }
sealant-runtime-core = { workspace = true }
sealant-telemetry = { workspace = true }
tokio = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }
