[package]
name = "sealant-runtime-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Configuration, state machines, policy, and health for the sealantd runtime."

[lints]
workspace = true

[dependencies]
sealant-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
getrandom = { workspace = true }
hex = { workspace = true }
