[package]
name = "sealantctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Debug and integration-test client for sealantd."

[lints]
workspace = true

[dependencies]
sealant-protocol = { workspace = true }
sealant-control = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
