[package]
name = "sealantd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "The sealantd runtime daemon binary."

[lints]
workspace = true

[dependencies]
sealant-protocol = { workspace = true }
sealant-runtime-core = { workspace = true }
sealant-telemetry = { workspace = true }
sealant-process = { workspace = true }
sealant-control = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
sealant-protocol = { workspace = true }
sealant-control = { workspace = true }
sealant-runtime-core = { workspace = true }
tokio = { workspace = true }
